# Parallel-Filesystem-Scanner-Daemon

./: .clang-tidy  .gitattributes  LICENSE  Readme.md  config.ini  makefile
.github/workflows/: benchmark.yml  ci.yml  ci_macos.yml  ci_ubuntu.yml  clang-tidy.yml  codeql.yml  coverage.yml  sanitizers.yml
assets/: market_landscape.html  project_strength.html
benchmark/: Readme.md  bench_config.json  bench_config_ci.json  benchmark.py  fake_http_client.py  helpers.py  metrics_sampler.py  reporter.py  resource_sampler.py  results.json  scenarios.py  service_process.py
src/: main.cpp
src/common/: db_types.h  entry.h  file_event.h  request_state.h
src/concurrency/: Readme.md  job_queue.h  thread_pool.h
src/daemon_system/: Readme.md  daemon.cpp  daemon.h  httpserver.cpp  httpserver.h  request_state.h  scheduler.cpp  scheduler.h  submit_scan_result.h
src/export_system/: Readme.md  export_manager.cpp  export_manager.h  exporter.cpp  exporter.h  index_reporter.cpp  index_reporter.h  metadata_index.cpp  metadata_index.h  stats.h
src/export_system/db_wrapper/: database_connection.h  database_initialization.h  index_reader.cpp  index_reader.h  index_writer.cpp  index_writer.h  readme.md  scan_diff.cpp  scan_diff.h  scan_table.cpp  scan_table.h
src/scan_system/: Readme.md  manager.cpp  manager.h  multi_scanner.cpp  multi_scanner.h  scan_data.h  scan_task.h  scan_types.h
src/utils/: Readme.md  async_logger.cpp  async_logger.h  config.cpp  config.h  formater.cpp  formater.h  metrics.h  os_info.h  sync_logger.h
tests/: CMakeLists.txt  macro.h  run.sh
tests/unit/: test_job_queue.cpp  test_thread_pool.cpp
web/: index_claude.html  index_gemini.html
